# rag-system

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/app/cli/: chat_with_any_doc.py  chat_with_youtube_video.py
src/chat_with_any_doc/: __init__.py  pipeline.py
src/chat_with_youtube_video/: __init__.py  pipeline.py
src/config/: logging_config.py  settings.py
src/genai/: __init__.py
src/genai/embedding/: __init__.py  embedding_service.py
src/genai/ingestion/: __init__.py  loader_factory.py  splitter.py
src/genai/ingestion/loaders/: __init__.py  base.py  docx_loader.py  pdf_loader.py  txt_loader.py
src/genai/llm/: __init__.py  client.py
src/genai/retrieval/: __init__.py  retrieval.py  vectorstore.py
